<resources>
    <string name="app_name">PMS</string>
    <string name="createNewRecord">Create New Record</string>
    <string name="allPassword">All Passwords</string>
    <string name="add">Add</string>
    <string name="add_note">Add Note</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="website_address">Website URL</string>
    <string name="title">Title</string>
    <string name="login">Login</string>
    <string name="pms">PMS</string>
    <string name="password_management_system">Password Management System</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_now">Register Now</string>
    <string name="facebook">Facebook</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="login_now">Login Now</string>
    <string name="update">Update</string>
    <string name="updateRecord">Update Record</string>
    <string name="delete_record_successfully">Delete record successfully</string>
    <string name="logout_successfully">Logout successful</string>
    <string name="something_went_wrong">Oops! Something went wrong</string>
    <string name="invalid_credential">Invalid Credential</string>
    <string name="register_successful">User register successful</string>
    <string name="update_profile">Update Profile</string>
    <string name="update_profile_successful">Update Profile Successful</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="user_profile">Profile</string>
    <string name="create_pin">Create Pin</string>
    <string name="email_address">Email Address</string>
    <string name="emergency_number">Emergency Number</string>
    <string name="username">Username</string>
    <string name="pinCreated">PIN is created</string>
    <string name="password_change_successfully">Password change successfully</string>
    <string name="emailVerification">We already send the code on your EMAIL. Please check your inbox and insert the
    code in form below to verify your email</string>
    <string name="verified">Verified</string>
    <string name="yor_are_successfully_verified_the_account">Yor are successfully verified the account</string>
    <string name="enter_email">Enter the Email associated with your account and we will send an email with instruction
    to reset your password</string>
    <string name="you_don_t_have_any_records_right_now">You do not have any records right now</string>
    <string name="verification_failed">OTP not matched</string>
    <string name="back">Back</string>
    <string name="resend_code">resend code</string>
    <string name="change_email">Change email</string>
    <string name="privacy_amp_policy"><![CDATA[Privacy & Policy]]></string>
    <string name="nickname">Nickname</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="incorrect_pin">Incorrect PIN</string>
    <string name="create_your_lock_screen_pin">Create your lock screen PIN</string>
    <string name="please_enter_your_pin">Please enter your PIN</string>
    <string name="disable_screen_lock">Disable Screen Lock</string>
    <string name="enable_screen_lock">Enable Screen Lock</string>
    <string name="logout">Logout</string>
    <string name="internal_issue">Some internal issue please try again later</string>
    <string name="verify">Verify</string>
    <string name="email_already_register">Email address is already register</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="lock_note">Lock Note</string>
    <string name="done">Done</string>
    <string name="enter_verification_code_we_just_sent_you_on_your_email_address">Enter verification code we just sent you on your email address.</string>
    <string name="your_new_password_must_be_different_from_previous_used_passwords">Your new password must be different from previous used passwords.</string>

</resources>