<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View"/>

        <variable
            name="viewModel"
            type="com.purpleshade.pms.fragment.signup.SignUpViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.signup.SignUpFragment">

        <TextView
            android:id="@+id/mLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size30"
            android:fontFamily="@font/audiowide_regular"
            android:text="@string/pms"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/mLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/audiowide_regular"
            android:text="@string/password_management_system"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/size16"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mLogo" />


        <LinearLayout
            android:id="@+id/mLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size20"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size20"
                android:layout_marginEnd="@dimen/size20"
                android:hint="Username">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/raleway_medium"
                    android:inputType="textEmailAddress"
                    android:textStyle="bold"
                    android:text="@={viewModel.username}"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size20"
                android:layout_marginTop="@dimen/size10"
                android:layout_marginEnd="@dimen/size20"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/raleway_medium"
                    android:inputType="textEmailAddress"
                    android:textStyle="bold"
                    android:text="@={viewModel.email}"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size20"
                android:layout_marginTop="@dimen/size10"
                android:layout_marginEnd="@dimen/size20"
                android:hint="@string/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/raleway_medium"
                    android:inputType="textPassword"
                    android:textStyle="bold"
                    android:text="@={viewModel.password}"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size20"
                android:layout_marginTop="@dimen/size10"
                android:layout_marginEnd="@dimen/size20"
                android:hint="@string/confirm_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/raleway_medium"
                    android:inputType="textPassword"
                    android:textStyle="bold"
                    android:text="@={viewModel.confirmPassword}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size20"
                android:background="@drawable/gradient"
                android:fontFamily="@font/raleway_medium"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/size16"
                android:onClick="@{viewModel.signUpButtonClick}"/>

            <ProgressBar
                android:id="@+id/mProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/size20"
                android:visibility="@{viewModel.progressBar ? View.VISIBLE : View.GONE}" />

        </LinearLayout>



        <TextView
            android:id="@+id/mLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size20"
            android:fontFamily="@font/raleway_medium"
            android:padding="@dimen/size10"
            android:text="@string/login_now"
            android:textColor="@color/colorBlue"
            android:onClick="@{viewModel.onLoginClick}"
            android:textSize="@dimen/size14"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mLinearLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>