<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.purpleshade.pms.fragment.login.LoginViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/size20"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/mLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size30"
                    android:fontFamily="@font/audiowide_regular"
                    android:text="@string/pms"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!--<TextView
                    android:id="@+id/mLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/audiowide_regular"
                    android:text="@={viewModel.username}"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/size16"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mLogo" />
-->


                <LinearLayout
                    android:id="@+id/mLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size20"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/size20"
                        android:layout_marginEnd="@dimen/size20"
                        android:hint="@string/email">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/mUserId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/raleway_medium"
                            android:inputType="textEmailAddress"
                            android:text="@={viewModel.email}"
                            android:textStyle="bold" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/size20"
                        android:layout_marginTop="@dimen/size10"
                        android:layout_marginEnd="@dimen/size20"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_weight="8"
                            android:hint="@string/password">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/mUserPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/raleway_medium"
                                android:inputType="textPassword"
                                android:text="@={viewModel.password}"
                                android:textStyle="bold" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <ImageView
                            android:id="@+id/mPasswordVisiblity"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_weight="2"
                            android:background="@drawable/border"
                            android:contentDescription="@null"
                            android:onClick="@{viewModel.passwordVisibilityOnClick}"
                            android:padding="15dp"
                            android:src="@drawable/ic_visible" />

                    </LinearLayout>


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/mLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/size20"
                        android:background="@drawable/gradient"
                        android:fontFamily="@font/raleway_medium"
                        android:onClick="@{viewModel.onLoginButtonClick}"
                        android:text="@string/login"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/size16" />

                </LinearLayout>

                <TextView
                    android:id="@+id/mForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size20"
                    android:fontFamily="@font/raleway_medium"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/size14"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mLinearLayout" />

                <TextView
                    android:id="@+id/mRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size20"
                    android:fontFamily="@font/raleway_medium"
                    android:onClick="@{viewModel.onRegisterClick}"
                    android:padding="@dimen/size10"
                    android:text="@string/register_now"
                    android:textColor="@color/colorBlue"
                    android:textSize="@dimen/size14"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mForgotPassword" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>